[gd_scene load_steps=9 format=2]

[ext_resource path="res://Towers/DemoSniper/Resources/BaseSniper.png" type="Texture" id=1]
[ext_resource path="res://Towers/DemoSniper/Main Scenes/Sniper.gd" type="Script" id=2]
[ext_resource path="res://Towers/DemoSniper/Resources/shoot.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 120.0

[sub_resource type="Animation" id=4]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Base:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:ray_state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ray:default_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.266667, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Ray:width")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Base:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:ray_state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ray:default_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.266667, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Ray:width")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shoot"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Base:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:ray_state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ray:default_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.01, 1.19, 1.2, 1.35, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.266667, 0.392157 ), Color( 1, 0, 0.266667, 0.784314 ), Color( 1, 0, 0.266667, 0 ), Color( 1, 0, 0.266667, 0 ), Color( 1, 0, 0.266667, 1 ), Color( 1, 0, 0.266667, 1 ), Color( 1, 0, 0.266667, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.19, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 2 ],
"method": "change_state"
}, {
"args": [ 0 ],
"method": "change_state"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Ray:width")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.1, 1.15, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 3.0, 3.0, 1.0 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.99997
height = 18.0

[node name="Sniper" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )
id = 2
range_offset = Vector2( 0, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 0, -10 )
texture = ExtResource( 1 )
hframes = 3

[node name="Ray" type="Line2D" parent="."]
position = Vector2( 0, -11 )
z_index = 1
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 1, 0, 0.266667, 1 )
end_cap_mode = 1

[node name="Cover" type="Sprite" parent="."]
position = Vector2( 0, -10 )
z_index = 2
texture = ExtResource( 1 )
hframes = 3
frame = 2

[node name="Animator" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 2 )
anims/Shoot = SubResource( 3 )

[node name="RayCast" type="RayCast2D" parent="."]
position = Vector2( 0, -11 )
collision_mask = 17
collide_with_areas = true

[node name="NoBuild" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoBuild"]
position = Vector2( 0, -3 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Shoot_SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -7.0
pitch_scale = 0.5
max_distance = 360.0
attenuation = 2.5
bus = "SFX"

[connection signal="animation_finished" from="Animator" to="." method="_on_animation_finished"]
